@@ -1,5 +1,6 @@
 20140302
 	utils/cc/funct.c - remove out-of-bounds reference
+	os/ipaq1110, ip/ipaux.c, os/sa1110 - add default cases to keep compiler happy
 20140223
 	/dis/sig: use raise not exit for errors
 20140105
